data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_470.wast
;; 1. **Check `nop` in `br_if` Skip**:    Insert a `nop` immediately before a `br_if` instruction that should NOT take the branch if the condition evaluates to `0`. Verify whether the presence of `nop` causes the branch to be falsely taken.

(assert_invalid
  (module 
    (func (block (nop) 
                (br_if 0 (i32.const 0)))))
  "type mismatch"
)